--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           </button>
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav">
-              <li class="nav__item"><a href="/" class="nav__item-link" title="Home">Home</a></li>
-              <li class="nav__item"><a href="/about" class="nav__item-link" title="About">About</a></li>
+              <li class="nav__item"><a href="index.html" class="nav__item-link" title="Home">Home</a></li>
+              <li class="nav__item"><a href="./about.html" class="nav__item-link" title="About">About</a></li>
               <li class="nav__item with-dropdown">
                 <a href="/solar-for-homes" class="dropdown-toggle nav__item-link" title="Expertise">Expertise</a>
                 <i class="fa fa-angle-down" data-toggle="dropdown"></i>
