fix href in About.html

--- a/index.html
+++ b/index.html
@@ -564,13 +564,13 @@
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 footer__widget footer__widget-about">
               <div class="footer__widget-content mb-40">
-                <img src="/assets/images/logo/lumico-logo-color.png" alt="logo" class="logo-size-footer mb-30">
+                <img src="./assets/images/logo/lumico-logo-color.png" alt="logo" class="logo-size-footer mb-30">
                 <p class="mb-20">Lumico Solar & Electrical is a family-owned business that has been dedicated to helping
                   Adelaide homeowners save money on their energy bills for nearly 25 years. We offer premium products
                   and solutions, including various warranty options, energy savings check and finance alternatives.
                   Simply get in touch with us today to discuss any solar or electrical need or question you have.</p>
 
-                <img src="/assets/images/cec-member-logo.png" style="width:180px" alt="CEC council member logo">
+                <img src="./assets/images/cec-member-logo.png" style="width:180px" alt="CEC council member logo">
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 footer__widget footer__widget-nav">
@@ -634,7 +634,7 @@
                       class="fa fa-tumblr"></i></a></li>
               </ul>
               <br>
-              <img src="/assets/images/logo-south-australia.png" style="width:120px" alt="Logo South Australia" />
+              <img src="./assets/images/logo-south-australia.png" style="width:120px" alt="Logo South Australia" />
             </div>
           </div>
         </div>
