--- a/about.html
+++ b/about.html
@@ -100,9 +100,9 @@
             <nav class="navbar navbar-expand-lg sticky-navbar">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/">
-                        <img src="/assets/images/logo/lumico-logo.png" style="width:100%" class="logo-light logo-size"
+                        <img src="./assets/images/logo/lumico-logo.png" style="width:100%" class="logo-light logo-size"
                             alt="logo">
-                        <img src="/assets/images/logo/lumico-logo-color.png" style="width:100%"
+                        <img src="./assets/images/logo/lumico-logo-color.png" style="width:100%"
                             class="logo-dark logo-size" alt="logo">
                     </a>
                     <button class="navbar-toggler" title="Menu" type="button">
@@ -171,7 +171,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-8">
                         <div class="text__block mb-30">
-                            <img src="assets/images/about/about-lumico.jpg"
+                            <img src="./assets/images/about/about-lumico.jpg"
                                 alt="Lumico Solar & Electrical South Australia" class="mb-30 w-100" />
                             <div class="row">
                                 <div class="col-md-12 col-lg-12">
@@ -307,31 +307,31 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <div class="slick-carousel"
                             data-slick='{"slidesToShow": 3, "arrows": true, "dots": false, "autoplay": true,"autoplaySpeed": 4000, "infinite": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 1}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-1.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-1.jpg"
                                         alt="Solar Panels in South Australia"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-2.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-2.jpg"
                                         alt="Solar Panels installers"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-3.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-3.jpg"
                                         alt="Solar Panel installer in South Australia"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-4.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-4.jpg"
                                         alt="Solar panels for homes"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-5.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-5.jpg"
                                         alt="Lumico Solar and Electrical team"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-6.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-6.jpg"
                                         alt="Electrical Services"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-7.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-7.jpg"
                                         alt="Maintenance on Electrical panel"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-8.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-8.jpg"
                                         alt="Electrical services worker"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-9.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-9.jpg"
                                         alt="Solar for business in South Australia"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-10.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-10.jpg"
                                         alt="Solar panels for businesses"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-11.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-11.jpg"
                                         alt="Man doing electrical maintenance"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-12.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-12.jpg"
                                         alt="Electrical installations"></a></div>
-                            <div class="client"><a href="#"><img src="assets/images/about/about-13.jpg"
+                            <div class="client"><a href="#"><img src="./assets/images/about/about-13.jpg"
                                         alt="Installation of residential solar systems"></a></div>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 footer__widget footer__widget-about">
                             <div class="footer__widget-content mb-40">
-                                <img src="/assets/images/logo/lumico-logo-color.png" alt="logo"
+                                <img src="./assets/images/logo/lumico-logo-color.png" alt="logo"
                                     class="logo-size-footer mb-30">
                                 <p class="mb-20">Lumico Solar & Electrical is a family-owned business that has been
                                     dedicated to helping Adelaide homeowners save money on their energy bills for nearly
@@ -354,7 +354,7 @@
                                     warranty options, energy savings check and finance alternatives. Simply get in touch
                                     with us today to discuss any solar or electrical need or question you have.</p>
 
-                                <img src="/assets/images/cec-member-logo.png" style="width:180px"
+                                <img src="./assets/images/cec-member-logo.png" style="width:180px"
                                     alt="CEC council member logo">
                             </div>
                         </div>
@@ -421,7 +421,7 @@
                                             class="fa fa-tumblr"></i></a></li>
                             </ul>
                             <br>
-                            <img src="/assets/images/logo-south-australia.png" style="width:120px"
+                            <img src="./assets/images/logo-south-australia.png" style="width:120px"
                                 alt="Logo South Australia" />
                         </div>
                     </div>
