--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
               <div class="row fancybox-light mb-40">
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="embeda-forms-default" id="MTBldTRnQkN1TkFrNVNGUy9PT3U1QT09" data-app="forms"></div>
-                  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
+                  <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
                   </script>
                   <script>
                     (function (d, s, id) {
@@ -534,7 +534,7 @@
                   </div>
                   <div class="col-sm-10 col-md-10 col-lg-10">
                     <div class="embeda-forms-default" id="SUJXazdXdmU4dE1zQ01TZHgybmRvZz09" data-app="forms"></div>
-                    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
+                    <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
                     </script>
                     <script>
                       (function (d, s, id) {
@@ -620,7 +620,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 footer__widget footer__widget-nav">
               <h6 class="footer__widget-title">Instagram</h6>
-              <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
+              <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
               </script>
               <script src="https://apps.elfsight.com/p/platform.js" defer></script>
               <div class="elfsight-app-c79df1c7-6fdc-4ca3-bbc2-dff4129e9ef4"></div>
