--- a/about.html
+++ b/about.html
@@ -110,8 +110,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="mainNavigation">
                         <ul class="navbar-nav">
-                            <li class="nav__item"><a href="/lumico" class="nav__item-link" title="Home">Home</a></li>
-                            <li class="nav__item"><a href="/lumico/about" class="nav__item-link" title="About">About</a>
+                            <li class="nav__item"><a href="/" class="nav__item-link" title="Home">Home</a></li>
+                            <li class="nav__item"><a href="/about" class="nav__item-link" title="About">About</a>
                             </li>
                             <li class="nav__item with-dropdown">
                                 <a href="/solar-for-homes" class="dropdown-toggle nav__item-link"
