upload sales for homes.html

--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
               <li class="nav__item"><a href="./" class="nav__item-link" title="Home">Home</a></li>
               <li class="nav__item"><a href="./about" class="nav__item-link" title="About">About</a></li>
               <li class="nav__item with-dropdown">
-                <a href="/solar-for-homes" class="dropdown-toggle nav__item-link" title="Expertise">Expertise</a>
+                <a href="./solar-for-homes" class="dropdown-toggle nav__item-link" title="Expertise">Expertise</a>
                 <i class="fa fa-angle-down" data-toggle="dropdown"></i>
                 <ul class="dropdown-menu">
-                  <li class="nav__item"><a href="/solar-for-homes" class="nav__item-link" title="Solar For Homes">Solar
+                  <li class="nav__item"><a href="./solar-for-homes" class="nav__item-link" title="Solar For Homes">Solar
                       For Homes</a></li>
-                  <li class="nav__item"><a href="/solar-for-business" class="nav__item-link"
+                  <li class="nav__item"><a href="./solar-for-business" class="nav__item-link"
                       title="Solar For Businesses">Solar For Businesses</a></li>
-                  <li class="nav__item"><a href="/electrical-services" class="nav__item-link"
+                  <li class="nav__item"><a href="./electrical-services" class="nav__item-link"
                       title="Electrical Services">Electrical Services</a></li>
                 </ul>
               </li>
 
-              <li class="nav__item"><a href="/faq" class="nav__item-link" title="FAQ">FAQ</a></li>
-              <li class="nav__item"><a href="/news" class="nav__item-link" title="News">News</a></li>
-              <li class="nav__item"><a href="/contact" class="nav__item-link" title="Contact">Contact </a></li>
+              <li class="nav__item"><a href="./faq" class="nav__item-link" title="FAQ">FAQ</a></li>
+              <li class="nav__item"><a href="./news" class="nav__item-link" title="News">News</a></li>
+              <li class="nav__item"><a href="./contact" class="nav__item-link" title="Contact">Contact </a></li>
               <li class="nav__item nav__item-btn d-none d-md-block">
-                <a href="/contact" title="Contact" class="btn btn__primary action__btn-request">
+                <a href="./contact" title="Contact" class="btn btn__primary action__btn-request">
                   <span>GET A QUOTE</span><i class="icon-arrow-right"></i>
                 </a>
               </li>
