--- a/news.html
+++ b/news.html
@@ -269,7 +269,7 @@
                         </a>
                         <div style="text-align: center">
                             Previous. 1
-                            <a href="https://airsite.com.au/news?p=2">2</a>
+                            <a href="/newsp=2">2</a>
                             <a href="https://lumico.com.au/news?p=3">3</a>
                             <a href="https://lumico.com.au/news?p=4">4</a>
                             <a href="https://lumico.com.au/news?p=5">5</a>
